syntax = "proto3";

package codenjoy;

option java_package = "com.codenjoy.dojo";
option java_multiple_files = true;

message EventsRequest{

}

message EventsResponse{
  repeated Event event = 1;
}

message Event{
  string roomName = 1;
  string gameName = 2;
  string gameServerUrl = 3;
}

service EventService{
  rpc getAllEvents(EventsRequest) returns (EventsResponse);
}